5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1667_2967.log
== TEST (2019-04-16 17:06:44) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante"))
if (P1, P2 >= 1.37):
	print("Sim")
	print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:08:18) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
if (P1, P2 >= 1.37):
	print("Sim")
	print(max(P1,P2))
else:
	print("Nao")
	print(max(P1,P2))
	
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:08:30) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
if (P1, P2 >= 1.37):
	print("Sim")
	print(max(P1,P2))
else:
	print("Nao")
	print(max(P1,P2))
	
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:08:49) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
if (P1, P2 >= 1.37):
	print("Sim")
	print(max(P1,P2))
else:
	print("Nao")
	print(max(P1,P2))
	
-- EXECUTION TIME:
0.13033
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Sim
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:09:24) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
if (P1, P2 <= 1.37):
	print("Nao")
	print(max(P1,P2))
else:
	print("Sim")
	print(max(P1,P2))
	
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:11:16) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1, P2 <= 1.37):
	msg= "Nao"

else:
	msg= "Sim"
	
print(msg)
print(max(P1,P2)
-- ERROR:
File "XXXX", line 12
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:11:24) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1, P2 <= 1.37):
	msg= "Nao"

else:
	msg= "Sim"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:11:44) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1, P2 < 1.37):
	msg= "Nao"
else:
	msg= "Sim"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:11:53) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1, P2 < 1.37):
	msg= "Nao"
else:
	msg= "Sim"
	
print(msg)
print(max(P1,P2))
-- EXECUTION TIME:
0.292386
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Insira a sua altura:Insira a altura do acompanhante:Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Insira a sua altura:Insira a altura do acompanhante:Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Insira a sua altura:Insira a altura do acompanhante:Nao
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:11:53) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1, P2 < 1.37):
	msg= "Nao"
else:
	msg= "Sim"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:12:10) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1,P2 <1.37):
	msg= "Nao"
else:
	msg= "Sim"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:12:28) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))

if (P1,P2 <1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:13:11) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1,P2 < mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:19:27) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1,P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:20:37) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1,P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:20:58) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1 and P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- EXECUTION TIME:
0.172506
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Sim
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Nao
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:20:58) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1 and P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:21:07) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1 and P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- EXECUTION TIME:
0.15543
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Sim
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Nao
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:21:16) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1 and P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:21:34) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1 and P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:22:42) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1,P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:22:48) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1,P2 <= mi):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:24:11) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (P1+P2 <= mi*2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:26:13) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1,P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:26:29) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1,P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- EXECUTION TIME:
0.215419
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Sim
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:26:31) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1,P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:28:02) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1 and mi <= P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:28:07) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1 and mi <= P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- EXECUTION TIME:
0.163618
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:28:13) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1 and mi <= P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:30:44) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1 and mi <= P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:32:08) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1 and mi <= P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:32:23) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (mi <= P1 and mi <= P2):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:34:03) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (max(P1,P2) <= 1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:34:21) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (max(P1,P2) <= 1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:35:05) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (max(P1,P2) <= 1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:35:12) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (max(P1,P2) >= 1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:35:22) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (max(P1,P2) >= 1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- EXECUTION TIME:
0.195986
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:51:36) 
-- CODE:
P1= float(input("Insira a sua altura:"))
P2= float(input("Insira a altura do acompanhante:"))
mi= 1.37
if (max(P1,P2) >= 1.37):
	msg= "Sim"
else:
	msg= "Nao"
	
print(msg)
print(max(P1,P2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
